# olive_shop

./: .env  .env.dev  Dockerfile  Dockerfile.prod  Makefile  pyproject.toml
dev/: docker-compose.dev.yml  docker-compose.prod.yml
frontend/: index.html
frontend/css/: main.css
frontend/js/: calcCartPrice.js  cart-01.js  cart-02.js  makeOrder.js  renderProducts.js
src/: app.py  worker.py
src/admin/: __init__.py  availability.py  currencies.py  orders.py  products.py  shops.py  variety.py
src/api/: __init__.py  payments.py  products.py  users.py
src/methods/: currencies.py  orders.py  products.py  users.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 1718822179_30d559cb01b8.py  1718826026_2400c404b129.py  1718903740_13af43bc16de.py  1718912862_dca7a8a54646.py  1719084793_69764974c5f8.py  1719333019_ae0c93d230a6.py  1719334299_f2628210748e.py
src/models/: __init__.py  availability.py  currencies.py  orders.py  products.py  purchase.py  shops.py  users.py  varieties.py
src/querysets/: currencies.py  products.py
src/settings/: base.py  db.py
src/templates/: create.html  details.html  edit.html  index.html  layout.html  list.html  login.html
src/utils/: auth.py  custom_types.py  payments.py
